crates/nexus/tests/compile_fail/wrong_event_type.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/wrong_event_type.rs:54:35
   |
54 |     user.replay(Version::INITIAL, &OrderEvent::Placed);
   |          ------                   ^^^^^^^^^^^^^^^^^^^ expected `&UserEvent`, found `&OrderEvent`
   |          |
   |          arguments to this method are incorrect
   |
   = note: expected reference `&UserEvent`
              found reference `&OrderEvent`
note: method defined here
  --> src/aggregate.rs
   |
   |     pub fn replay(&mut self, version: Version, event: &EventOf<A>) -> Result<(), KernelError> {
   |            ^^^^^^
